# ERAV-4

./: README.md
Session-11/: README.md  app.py  push_hf_tokenizer.py  requirements.txt  space.yaml  tokenizer_config.json
Session-11/src/: README.md  hindi_bpe.model  hindi_bpe.vocab  hindi_corpus.txt  sentence.ipynb
Session-12/: README.md  README_HUB.md  app.py  demo.py  hf_push.py  inference.py  requirements.txt  train_get2-8-init.py  train_get2_8_init (1).ipynb  upload_to_hf.py
Session-7/: Model5.ipynb  README (1).md
Session-7/py_src/: test.py  train_model4.py
Session-7/py_src/models/: model_5.py
Session-8/CIFAR100-main/: README.md  model.py  pyproject.toml  run_train_test.ipynb  test.py  train.py
Session-9/ResNet-Pre/: Model5.ipynb  requirements.txt
Session-9/ResNet-Pre/models/: resnet50.py
Session-9/ResNet-Pre/train_test/: test.py  train.py
Session2/: README.md
Session3/: Dockerfile  README.md  docker-compose.yml  env.example  main.py  models.py  requirements.txt
Session3/client/: package.json  tailwind.config.js
Session3/client/public/: index.html
Session3/client/src/: App.js  index.css
Session3/client/src/components/: CodeGenerator.js  FileUpload.js  Header.js  LoadingSpinner.js  PaperAnalysis.js  ParagraphAnalyzer.js  QuestionInterface.js  TechnicalAnalysis.js
Session3/services/: ai_service.py  pdf_service.py
Session5/: Iteration1Session5.ipynb  Iteration2_99_34_80K.ipynb  Iteration3_99_20_19K.ipynb  Iteration4_99_42_19K.ipynb  README.md
Session6/: README.md  run_train_test1.ipynb  run_train_test2.ipynb  run_train_test3.ipynb  run_train_test4.ipynb
Session6/py_src/: test.py  train.py
Session6/py_src/models/: model_1.py  model_2.py  model_3.py  model_4.py
